Fixes nav & size issues on mobile

--- a/static/css/_config.scss
+++ b/static/css/_config.scss
@@ -1,5 +1,6 @@
 $primary-color: #312f2f;
 $secondary-color: #ce6674;
+$third-color: #ffc0c9;
 
 @mixin easeOut {
     transition: all 0.5s ease-out;
